--- a/index.html
+++ b/index.html
@@ -17,23 +17,33 @@
 <body>
     <!-- HEADER -->
     <header class="Header">
-        <section class="headerSection">
-            <picture>
-                <img class="imgLogo" src="./assets/image/logo.png" alt="Logo">
-            </picture>
+        <nav class="navbar fixed-top bg-body-tertiary">
+            <div class="container-fluid">
+                <figure>
+                    <img src="./assets/image/logo.png" alt="Logo" width="30" height="24"
+                        class="d-inline-block align-text-top">
+                    Sepermercado
+                </figure>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Features</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Pricing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                        </li>
+                    </ul>
+                </div>
 
-            <nav class="NavBar">
-                <ul class="listaLinks">
-                    <li class="links activo">Inicio</li>
-                    <li> <a class="links" href="./Pages/contacto.html"> Contacto </a> </li>
-                </ul>
-            </nav>
+            </div>
+        </nav>
 
-            <img class="imgUsuario" src="./assets/image/usuario.png" alt="Usuario">
-
-
-            <img src="./assets/image/menu.png" alt="Menu hamburguesa" class="menuHamburguesa">
-        </section>
     </header>
 
     <!-- MAIN -->
