--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Supermercado</title>
+    <!-- BOOTSTRAP -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <!-- CSS -->
     <link rel="stylesheet" href="../Styles/contacto.css">
     <link rel="stylesheet" href="../Styles/style.css">
 </head>
@@ -12,23 +15,38 @@
 <body>
     <!-- HEADER -->
     <header class="Header">
-        <section class="headerSection">
-            <picture>
-                <img class="imgLogo" src="../assets/image/logo.png" alt="Logo">
-            </picture>
+        <nav class="navbar navbar-dark fixed-top">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+                    aria-labelledby="offcanvasDarkNavbarLabel">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Dark offcanvas</h5>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                            aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                            <li class="nav-item">
+                                <a class="nav-link" href="../index.html">INICIO</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">CONTACTO</a>
+                            </li>
+                        </ul>
+                        <form class="d-flex mt-3" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-success" type="submit">Search</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </nav>
 
-            <nav class="NavBar">
-                <ul class="listaLinks">
-                    <li> <a class="links" href="../index.html"> Inicio </a></li>
-                    <li class="links activo"> Contacto </li>
-                </ul>
-            </nav>
-
-            <img class="imgUsuario" src="../assets/image/usuario.png" alt="Usuario">
-
-
-            <img class="menuHamburguesa" src="../assets/image/menu.png" alt="Menu hamburguesa">
-        </section>
     </header>
 
     <!-- Form -->
@@ -39,17 +57,18 @@
                 <br>
                 <input class="inputForm" type="text" name="nombre" placeholder="Ingrese aqui su nombre" required>
             </label>
-            
+
             <label for="email">
                 Email:
                 <br>
                 <input class="inputForm" type="email" name="email" placeholder="Ingrese aqui su email" required>
             </label>
-            
+
             <label for="mensaje">
                 Mensaje:
                 <br>
-                <textarea class="textaAreaForm inputForm" name="mensaje" id="mensaje" placeholder="Escribi aca tu mensaje" required></textarea>
+                <textarea class="textaAreaForm inputForm" name="mensaje" id="mensaje"
+                    placeholder="Escribi aca tu mensaje" required></textarea>
             </label>
 
             <button class="botonEnviar" type="submit">Enviar</button>
@@ -86,6 +105,7 @@
 
 
     <script src=""></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
