--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="./Pages/contacto.html">CONTACTO</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./Pages/contacto.html">CARRITO</a>
+                            </li>
                         </ul>
                         <form class="d-flex mt-3" role="search">
                             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -54,11 +57,13 @@
     <!-- MAIN -->
     <main class="Main">
         <section class="mainSection">
-            <h1 class="tituloPrincipal">Supermercado</h1>
-            <h2>Productos:</h2>
-            <article class="cardsContainer">
+            <div class="bannerContainer">
+                <img src="./assets/image/banner.png" class="banner" alt="banner">
+                <h1 class="tituloPrincipal">Supermercado <br> Digital</h1>
+            </div>
 
-            </article>
+            <h2>Productos:</h2>
+            <article class="cardsContainer"></article>
 
             <article>
                 <section class="reseniasContainer">
