--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -37,6 +37,9 @@
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="#">CONTACTO</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">CARRITO</a>
+                            </li>
                         </ul>
                         <form class="d-flex mt-3" role="search">
                             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
