--- a/Pages/carrito.html
+++ b/Pages/carrito.html
@@ -3,13 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Supermercado</title>
     <!-- BOOTSTRAP -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <!-- CSS -->
-    <link rel="stylesheet" href="../Styles/contacto.css">
     <link rel="stylesheet" href="../Styles/style.css">
+    <link rel="stylesheet" href="../Styles/carrito.css">
+    <!-- FAVICON -->
+    <link rel="shortcut icon" href="./assets/icons/favicon.ico" type="image/x-icon">
+    <title>Supermercado</title>
 </head>
 
 <body>
@@ -25,20 +28,20 @@
                 <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
                     aria-labelledby="offcanvasDarkNavbarLabel">
                     <div class="offcanvas-header">
-                        <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Dark offcanvas</h5>
+                        <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu</h5>
                         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
                             aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link" href="../index.html">INICIO</a>
+                                <a class="nav-link" aria-current="page" href="../index.html">INICIO</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">CONTACTO</a>
+                                <a class="nav-link" href="./contacto.html">CONTACTO</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="../Pages/carrito.html">CARRITO</a>
+                                <a class="nav-link active" href="#">CARRITO</a>
                             </li>
                         </ul>
                     </div>
@@ -48,33 +51,15 @@
 
     </header>
 
-    <!-- Form -->
-    <section class="sectionForm">
-        <form method="post" action="https://formspree.io/f/xgveopgd">
-            <label for="nombre">
-                Nombre:
-                <br>
-                <input class="inputForm" type="text" name="nombre" placeholder="Ingrese aqui su nombre" required>
-            </label>
+    <!-- MAIN -->
+    <main class="Main">
+        <section class="zonaDeProductos">
+            <article class="cajaDeProductosDelCarrito"></article>
+            <article class="calculoPago"></article>
+        </section>
+    </main>
 
-            <label for="email">
-                Email:
-                <br>
-                <input class="inputForm" type="email" name="email" placeholder="Ingrese aqui su email" required>
-            </label>
-
-            <label for="mensaje">
-                Mensaje:
-                <br>
-                <textarea class="textaAreaForm inputForm" name="mensaje" id="mensaje"
-                    placeholder="Escribi aca tu mensaje" required></textarea>
-            </label>
-
-            <button class="botonEnviar" type="submit">Enviar</button>
-        </form>
-    </section>
-
-    <!-- Footer -->
+    <!-- FOOTER -->
     <footer class="Footer">
         <section class="footerSection">
             <article class="footerArticleText">
@@ -103,8 +88,8 @@
     </footer>
 
 
-    <script src=""></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../JS/carrito.js"></script>
 </body>
 
 </html>
